# usize-kv

./: .gitignore  Cargo.toml  README.md  store.uskv  tcp_client.py  test.sh
benches/: benchmark1.rs
experiment_reference/: redis_tcp_client.go
src/: cli_util.rs  main.rs  optimizer.rs  tcp_server.rs  tcp_server_async.rs  types.rs  uskv.rs
tcp_reader_examples/: tcp_client.c  tcp_client.go  tcp_client.java  tcp_client.js  tcp_client.rs
