[package]
name = "usize-kv"
version = "0.1.0"
authors = ["Abby <abbychau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evmap = "8.0.1"
may = "0.3.22"
getopts = "0.2.21"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "benchmark1"
harness = false